# VIDA

./: .gitignore  README.md  dataset.md  pyproject.toml  requirements.txt
configs/: deepspeed_zero2.json
docs/: DATASET.md
eval/: infer_rl_checkpoint.py  keywords.py  model_eval.py  sft_infer.py
eval/evaluation_data_final/: test_ground_truth.jsonl  test_inputs.jsonl  test_inputs_with_captions.jsonl
eval/results/: InternVL3_5-8B.jsonl  InternVL3_5-8B_report.txt  Meta-Llama-3-8B_output-text.jsonl  Meta-Llama-3-8B_output-text_report.txt  base_output.jsonl  base_output_report.txt  deepseek-v3_output.jsonl  deepseek-v3_output_report.txt  deepseek-vl-7b.jsonl  deepseek-vl-7b_report.txt  internvl3-38b_output.jsonl  internvl3-38b_output_report.txt  llava-1.5-7b.jsonl  llava-1.5-7b_report.txt  qwen2.5vl8b.jsonl  qwen2.5vl8b_report.txt  rl_base_model+rl_checkpoint_900_output.jsonl  rl_base_model+rl_checkpoint_900_output_report.txt
rl/: custom_reward_gspo.py  merge.sh  my_plugin.py  my_plugin_v2.py  run_grpo.py  run_gspo.sh  system_prompt.txt
scripts/: evaluate.sh  infer.sh  merge_lora.sh  train_gspo.sh  train_sft.sh
sft/: ds_config.json  ds_config_final.json  ds_config_lora.json  run_lora.sh  run_lora_single.sh  run_sft.sh  run_sft_single.sh
vida/: __init__.py  constants.py  evaluate.py  infer.py  reward.py
