[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vida-clarification"
version = "0.1.0"
description = "Code for VIDA: Visual Intent-driven Design Assistant for proactive multimodal clarification."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "modelscope-swift",
  "sentence-transformers",
  "torch",
  "tqdm",
  "numpy",
]

[tool.setuptools.packages.find]
include = ["vida*"]
